--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     compile 'com.google.guava:guava:19.0'
     compile 'org.languagetool:language-nl:3.4'
 
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.1.0'
     testCompile 'org.mockito:mockito-all:1.10.19'
